Fixed table alignment on mobile

--- a/EventApp/static/events/css/campaign.css
+++ b/EventApp/static/events/css/campaign.css
@@ -24,25 +24,38 @@ html, body {
 }
 
 .table {
-    margin-left: 36%;
+    margin: 12px;
     width: 100%;
 }
 
-#volTable{
-    margin-left: 16%;
+.flexProp {
+    display: flex;
+    flex-direction: row;
+    justify-items: center;
+    align-items: center
+}
+
+.volTable {
+    margin:12px;
     width: 100%;
 }
 
 @media only screen and (max-width: 800px) {
     .table {
         margin-left: 6%;
-        width: 100%;
+        width: 90%;
+        word-wrap: break-word;
     }
 
-    #volTable{
+    .flexProp {
+        display: block;
+    }
 
-        margin-left: 1%;
-        width: 100%;
+    .volTable {
+        margin-left: 5%;
+        width: 90%;
+        word-wrap: break-word;
+
     }
 }
 
